fixed z-index issue with windows and dropdown

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -80,14 +80,18 @@
     font-family: 'Chicago Plain';
     padding-top: 0px !important;
     padding-bottom: 0px !important;
-    background-color: #dddddd !important;
+    background-color: #ffffff !important;
     border: 1px solid #444444;
     border-radius: 0px !important;
     box-shadow: 1px 1px #444444;
+    margin-top: 0px !important;
+    /*display: block;*/
+    z-index: 20000 !important;
 }
 
 .dropdown-item {
-
+    position: relative;
+    z-index: 20000 !important;
 }
 
 .headerlinks{
